# example-bazel-rust

./: .gitignore  BUILD  BUILD.bazel  README.md  WORKSPACE  hello.rs  local.rs
mylib/: BUILD  BUILD.bazel  mylib.rs
mylib/tests/: mylib_test1.rs
tests/: BUILD.bazel  all_tests.rs
